<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#fff"
android:paddingLeft="16dp"
android:paddingRight="16dp">
    <TextView
        android:id="@+id/aim_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objective"
        android:layout_margin="16dp"
        android:textSize="32sp"/>
    <TextView
        android:id="@+id/aim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="16sp"
        android:layout_below="@+id/aim_head"/>
    <TextView
        android:id="@+id/made_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:layout_below="@+id/aim"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textSize="24sp"
        android:layout_below="@+id/made_by"/>


</RelativeLayout>
