<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bb86fc"
    >

    <ImageView
        android:id="@+id/startlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/startlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitStart"
        />

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="342dp"
        android:textSize="18sp"
        android:text="@string/description"
        />
    <Button
        android:id="@+id/donate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="224dp"
        android:text="@string/donate"
        android:layout_below="@+id/desc_text"
        android:background="@drawable/button_bg_rounded_corners"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="224dp"
        android:text="@string/info"
        android:layout_below="@+id/desc_text"
        android:background="@drawable/button_bg_rounded_corners"
        />
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="158dp"
         android:layout_marginBottom="80dp"
         android:layout_marginTop="254dp"
         android:padding="8dp"
         android:text="@string/partners"
         android:layout_below="@+id/desc_text"
         android:background="@drawable/button_bg_rounded_corners"
         />
</RelativeLayout>